# Sanic-JWT-Extended

./: .gitignore  Makefile  pyproject.toml
sanic_jwt_extended/: __init__.py  blacklist.py  decorators.py  jwt_manager.py  redis.py  tokens.py
tests/: test_jwt_manager.py  test_token.py
tests/test_decorators/: test_jwt_optional.py  test_jwt_required.py  test_refresh_jwt_required.py
