[tool.poetry]
name = "Sanic-JWT-Extended"
version = "1.0-dev.13"
description = "Extended JWT integration with Sanic"
authors = [
    "Seonghyeon Kim <kim@seonghyeon.dev>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/NovemberOscar/Sanic-JWT-Extended"
documentation = "https://sanic-jwt-extended.readthedocs.io/en/latest/"
keywords = ["sanic", "jwt", "json web token"]
classifiers=[
        "Environment :: Web Environment",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.9",
        "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]

[tool.poetry.dependencies]
python = "^3.7.3"
sanic = "^21.6.2"
PyJWT = "^2.1.0"
flatten-dict = "^0.4.1"
aioredis = "^2.0.0"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.7b0"
pylint = "^2.9.6"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
pytest-redis = "^2.1.1"
mypy = "^0.910"
pytest-sanic = "^1.8.1"

[build-system]
requires = ["setuptools", "poetry>=1.1.4"]
build-backend = "poetry.core.masonry.api"
