[tool.poetry]
name = "Sanic-JWT-Extended"
version = "1.1.0"
description = "Extended JWT integration with Sanic"
authors = [
    "Seonghyeon Kim <kim@seonghyeon.dev>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/NovemberOscar/Sanic-JWT-Extended"
documentation = "https://sanic-jwt-extended.readthedocs.io/en/latest/"
keywords = ["sanic", "jwt", "json web token"]
classifiers=[
        "Environment :: Web Environment",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.9",
        "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]

[tool.poetry.dependencies]
python = "^3.11"
sanic = "^24.6.0"
PyJWT = "^2.6.0"
flatten-dict = "^0.4.2"
sanic-ext = "^23.12.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
pylint = "^2.14.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
pytest-redis = "^2.4.0"
mypy = "^0.960"
pytest-sanic = "^1.9.1"

[build-system]
requires = ["setuptools", "poetry>=1.1.4"]
build-backend = "poetry.core.masonry.api"
